--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Les productions de Datactivist sont librement réutilisables selon les termes de
 
 * Data wishlist : la liste des données idéales
 
-* … éventuellement démarrer la collecte et l'évaluation des données (selon le niveau des groupes)
+* … éventuellement démarrer la collecte et l'évaluation des données (selon le niveau d'avancement des groupes)
 
 ---
 class:inverse, middle, center
@@ -280,7 +280,7 @@ Google propose depuis quelques temps ce [moteur de recherche](https://toolbox.go
 OpenDataSoft référence tous les jeux de données publiés sur l'ensemble de ses portails. Parmi eux, le portail Public référence des jeux de données introuvables ailleurs comme la [localisation des radars](https://data.opendatasoft.com/explore/dataset/radars%40public/table/). 
 ![](https://datactivist.coop/datavizchallenge/2//img/dataods.png)
 ---
-### Trouver le bon .red[tag] sur OSM
+### [Conseil] Trouver le bon .red[tag] sur OSM
 La page "[Elements Cartographiques](https://wiki.openstreetmap.org/wiki/FR:%C3%89l%C3%A9ments_cartographiques)" sur le wiki d'OSM recense tous les tags utilisés dans la base de données. 
 
 [![](https://datactivist.coop/datavizchallenge/2/img/mapfeatures.png)](https://wiki.openstreetmap.org/wiki/FR:%C3%89l%C3%A9ments_cartographiques)
@@ -295,7 +295,7 @@ Par exemple, l'excellente [newsletter Data Is Plural](https://tinyletter.com/dat
 
 [![](https://datactivist.coop/datavizchallenge/2/img/dataisplural.png)](https://docs.google.com/spreadsheets/d/1wZhPLMCHKJvwOkP4juclhjFgqIY8fQFMemwKL2c64vk/edit#gid=0)
 ---
-### .red[L'évaluation] des données
+### Phase 2 : .red[L'évaluation] des données
 
 .pull-left[
 Chaque jeu de données listé dans le catalogue fait l’objet d’une évaluation à travers la “Dataset check list”. 
