--- a/index.html
+++ b/index.html
@@ -187,6 +187,8 @@ Du côté des acteurs publics, indispensable que les données mises à dispositi
 
 Or, les **espaces d’échange** et de dialogue entre producteurs et réutilisateurs de données sont encore rares mais essentiels pour fluidifier les frictions de la réutilisation. 
 
+--
+
 Les ateliers devront ainsi permettre de **favoriser la rencontre entre porteurs de projet et réutilisateurs** afin d’aider à la découverte de données pertinentes, de prendre en compte les besoins exprimés et d’encourager à l’ouverture des données dont les usagers ont besoin. 
 
 ---
@@ -199,6 +201,18 @@ Les ateliers devront ainsi permettre de **favoriser la rencontre entre porteurs 
 *   **Favoriser la rencontre entre porteurs de projets et producteurs de données ouvertes** pour améliorer la qualité des données
 
 *   **Faire émerger 3 projets emblématiques** qui seront accompagnés en détail dans la mise en œuvre du plan de route data élaboré à l’issue des ateliers.  
+
+---
+### .red[Rappel :] dates des ateliers
+
+#### le 5 novembre, 13h30-17h30, à l’EJCAM
+21 Rue Virgile Marron, 13005 Marseille
+
+#### le 29 novembre, 13h30-17h30, à l’AMSE
+5-9 Boulevard Maurice Bourdet, 13001 Marseille
+
+####le 17 décembre, 13h30-17h30, à la CISAM (sous réserves)
+61 Boulevard des Dames, 13002 Marseille
 
 ---
 ### Notre méthodologie : le [parcours d’évaluation du potentiel data](https://infolabs.io/pes)
@@ -232,7 +246,7 @@ Les ateliers devront ainsi permettre de **favoriser la rencontre entre porteurs 
 
 ### Phase 2 : la collecte et .red[l’évaluation des données]
 
-Il nous fait maintenant rouver de vrais jeux de données correspondants à travers une phase de **collecte des données**. 
+Il nous fait maintenant trouver de vrais jeux de données correspondants à travers une phase de **collecte des données**. 
 
 ![](img/list.png)
 
@@ -319,6 +333,22 @@ La cartographie des données réalisée à l’étape précédente est un outil 
 5. **Acheter** : identifier des sociétés (courtiers en données) qui pourraient vendre les données qui nous manquent.
 
 Ensuite, les porteurs de projet sont invités à **identifier 10 actions à réaliser maintenant / dans les 3 prochains mois / au cours de la prochaine année.**
+
+---
+### Pensez à .red[documenter] vos projets 
+
+Les étudiant·e·s du master Data, Information et Communication Digitale (DICOD), option Dispositifs numériques d'information et de communication de l'EJCAM sont là pour vous aider à documenter vos projets et à trouver les données. 
+
+
+.pull-left[
+Remplissez la fiche sur papier ensemble : 
+![](./img/want.png)
+]
+
+.pull-right[
+Documentez en ligne ensuite :
+![](./img/form.png)
+]
 ---
 class: inverse, center, middle
 
